src/main/java/org/example/models/error/ObjectError.java
package org.example.models.error;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public abstract class ObjectError {
    private String error;
}
